# rfid

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/hw/rfid/: mfrc522.cpp  mfrc522.h  mfrc522_reg.h
src/hw/spi/: SPI.cpp  SPI.h  Spi.cpp  Spi.h
